APOS/Sbot Script Refactor
All Files - Simplify, update language level methods, and refactor:
Make Variables final where possible. 
Replace action listener with Lambda. 
Replace for with enhanced for (simpler).
Remove unneeded imports. 
Remove unneeded String.valueOf()
Move "System.currentTimeMillis() / 1000L" OUT of floating point calculations! using long runTimeInSeconds.
Remove unneeded ==false/true and use !
Add Param type where possible
Remove unneeded duplicate return statements. 
Use java style brackets [ ] and not C Style.

pathwalker/pathwalker_wild - fixes bug where bot hits exception when calculating path, resembles APOS. Paths calculate the first time from any location, tested. This code was causing the exception "
} finally {
        try {
          in.close();
        } catch (Throwable t) {
        }"